force-app/main/default/objects/Journal_Address_Configration__mdt/Journal_Address_Configration__mdt.object-meta.xml
<CustomObject>
    <label>Journal Address Configration</label>
    <pluralLabel>Journal Address Configrations</pluralLabel>
</CustomObject>