force-app/main/default/objects/Journal_Address_Configration__mdt/fields/Address_Configuration_Fields__c.field-meta.xml
<CustomField>
    <fullName>Address_Configuration_Fields__c</fullName>
    <label>Address Configuration Fields</label>
    <type>TextArea</type>
</CustomField>