force-app/main/default/objects/Journal_Address_Configration__mdt/fields/Default_Record_model_id__c.field-meta.xml
<CustomField>
    <fullName>Default_Record_model_id__c</fullName>
    <label>Default Record model id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>