force-app/main/default/objects/Journal_Address_Configration__mdt/fields/Journal_Object__c.field-meta.xml
<CustomField>
    <fullName>Journal_Object__c</fullName>
    <label>Journal Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>