force-app/main/default/objects/Journal_Address_Configration__mdt/fields/Journal_type__c.field-meta.xml
<CustomField>
    <fullName>Journal_type__c</fullName>
    <label>Journal type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>